tools/onboarding_validation_result.txt
starter title: PASS
ribbon section: PASS
help ribbon tabs: PASS
help layout section: PASS
help style section: PASS
help heading: PASS
old top toolbar removed: PASS
old edit toolbar removed: PASS
licence start preserved: PASS
licence end preserved: PASS
valid document tail: PASS
Node syntax failure in script 3:

/tmp/tmpnxksb35q/script-3.js:90
    const starterText = "# Welcome to Sciwrix
                        ^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1713:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.23.1

inline JavaScript syntax: FAIL
Total failures: 1
Validation exit status: 1
